# unbox

./: .clang-format  .gitignore  AGENTS.md  GLOSSARY.md  ORCHESTRATOR.md  README.md  meson.build  tasks.md  unbox.toml
.skills/: add-extension.md  add-protocol.md  diagnose-real-seat.md  nested-run.md
.unbox/: extension-agent.md  package-agent.md
.unbox/rules/: contract-docs.md  listener-lifetime.md  no-translation-layers.md  parallel-wave-builds.md  sanitizer-noise.md  spawn-env.md  test-determinism.md  unit-registration.md  wlroots-include.md
assets/ext-stage-dock/: dock.rcss  dock.rml
assets/ext-window-field/: field.rcss  field.rml
notes/: favicon-spec.md  plan.md  rml-compositing-phase1.md  rml-compositing.md  status-bar-home-screen.md  tiling-layouts-reference.md  tiling-spec.md
packaging/: PKGBUILD  build-remote.sh  remote.local.example  setup-distcc.sh  start-unbox
subprojects/: doctest.wrap  rmlui.wrap  tomlplusplus.wrap
suppressions/: lsan.txt  ubsan.txt
